--- a/assets/css/_atoms.scss
+++ b/assets/css/_atoms.scss
@@ -272,7 +272,7 @@
   width: 100%;
 }
 
-@each $key, $val in ("1_2": 50%, "1_3": 33.333%, "1_4": 25%) {
+@each $key, $val in ("1_2": 50%, "1_3": 33.333%, "2_3": 66.666%, "1_4": 25%) {
   .width-#{$key} {
     width: $val;
   }
