--- a/_includes/pages/about.html
+++ b/_includes/pages/about.html
@@ -20,7 +20,7 @@
     <div class="height-10 relative">
       {% asset {{_.about_image}} class="absolute inset-full"%}
     </div>
-    <div class="col align-center">
+    <div class="col align-center px-4">
       <div class="maxwidth-4 markdown">
         {{_.about_text | markdownify}}
       </div>
