--- a/_includes/pages/home.html
+++ b/_includes/pages/home.html
@@ -27,8 +27,7 @@
         <div class="home-scroll-screen relative col align-end">
           <div
             class="home-scroll-screen-content sticky height-screen col justify-center sp-4 maxwidth-4 q-md-justify-end py-5"
-            data-init-class="opacity-0" data-class-on-enter="screen{{{forloop.index}}:-opacity-0"
-            data-class-on-leave="screen{{{forloop.index}}:+opacity-0">
+            data-init-class="opacity-0">
             <h2 class="font-heading text-xl q-md-text-md">{{screen.title}}</h2>
             {%- if screen.text - %}
             <div class="q-md-text-xs">{{screen.text}}</div>
