--- a/_includes/pages/services.html
+++ b/_includes/pages/services.html
@@ -1,7 +1,112 @@
-<h2>{{ site.data.pages.services[page.locale].title }}</h2>
+{%- assign _ = site.data.pages.services[page.locale] -%}
 
-{% assign method_pages = site.pages | where: "kind", "method" %}
-{% assign locale_method_pages = method_pages | where: "locale", page.locale %}
+<div class="relative" data-active-snapping>
+  <div class="relative height-screen sroll-snap-start col align-center py-7 px-4 sroll-snap-start overflow-hidden">
+    <div class="maxwidth-7 width-full col sp-2 pb-6 relative zindex-1 fill-parent">
+      <div class="push"></div>
+      <div class="col sp-2">
+        <div class="uppercase font-heading font-bold text-blue text-sm lead-line">{{_.intro_lead}}</div>
+        <div class="markdown text-xl q-md-text-lg font-heading">{{_.intro_text | markdownify}}</div>
+      </div>
+      <div class="push" style="flex-grow: 0.5"></div>
+      <div class="col sp-4">
+        <div class="uppercase font-heading font-bold text-blue text-sm lead-line">{{_.intro_services_title}}</div>
+        <div class="row justify-center sp-3">
+        {%- for slide in _.slides -%}
+          <div class="row align-start sp-1" style="flex-basis: 10em">
+            <div class="service-circle text-{{slide.color}}"></div>
+            <div class="text-sm">{{slide.name}}</div>
+          </div>
+        {%- endfor -%}
+        </div>
+      </div>
+    </div>
+
+    <div class="absolute inset-x bottom-0 col align-center text-black pb-4 zindex-1">
+      <a class="button-text" data-after-approach-animate="+is-white" href="#overview">
+        {% asset icons/icon-arrow-down.svg @inline %}
+      </a>
+    </div>
+  </div>
+</div>
+
+<div id="overview" class="sroll-snap-start col align-center px-6 py-7 pb-8">
+  <div class="maxwidth-7 width-full col sp-6">
+    <h2 class="font-heading text-xl">{{_.slides_title}}</h2>
+    <div class="row justify-center sp-3 hide-lg" data-carousel-indicators>
+      {%- for slide in _.slides -%}
+      <div class="service-carousel-indicator row align-start sp-2 {%if forloop.index==1%}is-active{% endif %}" style="flex-basis: 10em">
+        <div class="width-3 height-3 no-shrink">
+          <div class="service-circle text-{{slide.color}}"></div>
+        </div>
+        <div class="text-sm service-carousel-hidable-text">{{slide.name}}</div>
+      </div>
+      {%- endfor -%}
+    </div>
+    <div class="carousel">
+    {%- for slide in _.slides -%}
+      <div class="">
+        <div class="row sp-4 q-md-col q-md-align-center">
+          <div class="width-1_3 no-shrink q-md-width-full">
+            {% asset {{slide.img}} class="width-full"%}
+          </div>
+          <div class="markdown">{{slide.text}}</div>
+        </div>
+      </div>
+    {%- endfor -%}
+    </div>
+  </div>
+</div>
+
+<div class="col align-center px-4 py-7">
+  <div class="maxwidth-7 width-full col sp-6">
+    <h2 class="font-heading text-xl">{{_.services_title}}</h2>
+    <div class="row justify-center sp-3 hide-lg align-start">
+      <button class="button-transparent" style="flex-basis: 6em" data-services-filter="all">
+        <div class="service-carousel-indicator row align-start sp-1 is-active">
+          <div class="width-3 height-3 no-shrink">
+            <div class="service-circle text-blue"></div>
+          </div>
+          <div class="text-xs" style="padding-top:0.2rem;">{{_.services_all_button}}</div>
+        </div>
+      </button>
+      {%- for slide in _.slides -%}
+      <button class="button-transparent" style="flex-basis: 10em" data-services-filter="{{slide.name}}">
+        <div class="service-carousel-indicator row align-start sp-1">
+          <div class="width-3 height-3 no-shrink">
+            <div class="service-circle text-{{slide.color}}"></div>
+          </div>
+          <div class="text-xs"  style="padding-top:0.2rem;">{{slide.name}}</div>
+        </div>
+      </button>
+      {%- endfor -%}
+    </div>
+
+    {% assign method_pages = site.pages | where: "kind", "method" | where: "locale", page.locale %}
+    <div class="grid sp-6 q-lg-4">
+      {%- for method in method_pages -%}
+      <a href="{{method.url}}" class="reset-link col sp-3 width-1_3 q-lg-width-1_2 q-sm-width-full" data-method-tile>
+        <img src="{{method.hero_image.url}}?w={{400}}&h={{400 | times: 3 | divided_by: 4}}&fit=fill&f=faces"
+          alt="{{method.hero_image.description}}" class="width-full" />
+        <h3 class="font-heading text-md">{{method.title}}</h3>
+        <div class="markdown text-sm">{{method.description | markdownify}}</div>
+        <div class="row wrappable sp-2">
+        {%- for tag in method.tags -%}
+          <div class="text-xxs pill">{{tag}}</div>
+        {%- endfor -%}
+        </div>
+      </a>
+      {%- endfor -%}
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
 
 <ul>
 {% for page in locale_method_pages %}
