--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-white col align-center px-4 py-5">
+<footer class="bg-gray100 col align-center px-4 pt-7 pb-5">
   <div class="maxwidth-7 width-full col sp-5 q-lg-sp-6">
     <div class="row sp-3 align-center q-lg-col q-lg-sp-5">
       <div class="row sp-2">
